Fixed z-index.

--- a/static/css/event/every-moment.less
+++ b/static/css/event/every-moment.less
@@ -610,7 +610,7 @@
       right: 0;
       width: 960px;
       height: 100%;
-//      z-index: 3;
+      z-index: 1;
     }
     .upload-flow {
       position: absolute;
